# routes/validator.js
@@ -17,6 +17,23 @@ const categoriesValidationRules = () => {
     ]
 };
 
+const locationValidationRules = () => {
+    return [
+        body('city').toLowerCase().isIn(["new york", "chicago", "salt lake", "provo"]).withMessage('Must be a city with in the range.'),
+        body('country').toLowerCase().isIn(['usa']).withMessage('Not a valid country.')
+    ]
+};
+
+const reservationValidationRules = () => {
+    return [
+        body('startDate').isDate({format:'YYYY-MM-DD'}).withMessage('SD Must be a valid date with format YYYY-MM-DD.'),
+        body('endDate').isDate({format:'YYYY-MM-DD'}).withMessage('ED Must be a valid date with format YYYY-MM-DD.'),
+        body('status').toLowerCase().isIn(['reserved', 'active', 'completed', 'cancelled']).withMessage('Not a valid status.'),
+        body('totalPrice').isInt({gt:0}).withMessage('total price must be greater than zero.')
+    ]
+};
+
+
 const validate = (req, res, next) => {
     const errors = validationResult(req);
     if (errors.isEmpty()) {
@@ -27,4 +44,10 @@ const validate = (req, res, next) => {
     return res.status(422).json( {errors : extractedErrors, });
 };
 
-module.exports = { carValidationRules, categoriesValidationRules, validate }
+module.exports = {
+    carValidationRules,
+    categoriesValidationRules,
+    locationValidationRules,
+    reservationValidationRules,
+    validate
+}
